# CZ-Dev-RAG

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LEARNINGS.md  LICENSE  README.md  ROADMAP.md  STATE.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
.planning/phases/11-compose-client-mcp-profile/: EXEC-LOG.md  PLAN.md
.planning/phases/12-tailscale-ssh-issue-adr008/: EXEC-LOG.md  PLAN.md  REVIEW.md
.planning/phases/13-install-tailscale-magicdns/: PLAN.md
.planning/phases/14-tailscale-acl-device-tags/: PLAN.md
.planning/phases/15-invite-zsombor-tailnet/: PLAN.md
docs/: ARCHITECTURE.md  DECISIONS.md  OBSERVABILITY.md  RUNBOOK.md  SECURITY.md
evals/: README.md  __init__.py  gold_set.jsonl  run_evals.py  run_ocr_smoke.py
evals/ocr_smoke/: README.md  _generate_fixtures.py  sample-01.expected.txt  sample-02.expected.txt  sample-03.expected.txt  sample-04.expected.txt  sample-05.expected.txt
examples/demo-corpus/: README.md  acmeco-msa.md  acmeco-sow-001.md  bemer-kickoff-notes.md  bilingual-one-pager.md  cz-dev-pricing-internal.md
scripts/: README.md  _check_status.py  backup.sh  delete_by_source.py  ingest.py  sync_personal_kb.py
src/mcp_server/: Dockerfile  lightrag_client.py  server.py
src/ocr/: __init__.py  engine.py
src/rerank/: client.py
src/tracing/: __init__.py  config.py  tracer.py
tests/: test_delete.py  test_evals.py  test_ingest.py  test_mcp_server.py  test_rerank.py  test_tracing.py
